--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Portfolio</h1>
    <div> <a target="_blank" href="https://incandescent-conkies-24d5f7.netlify.app/" title="Air Fryer Recipes">Air Fryer Recipes</a>
 </div>
-<div> <a target="blank" href="https://clever-boyd-3f6704.netlify.app"></a>Weather App</div>
+<div> <a target="blank" href="https://clever-boyd-3f6704.netlify.app">Weather App</a></div>
+
 </body>
 </html>
