--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <div> <a target="_blank" href="https://incandescent-conkies-24d5f7.netlify.app/" title="Air Fryer Recipes">Air Fryer Recipes</a>
 </div>
 <div> <a target="blank" href="https://clever-boyd-3f6704.netlify.app">Weather App</a></div>
+<div> <a target="blank" >Dogs</a></div>
 
 </body>
 </html>
