--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Jude's Work in Progress</title>
 </head>
 <body>
-    <h1>Portfolio <sup class="wip">WIP</sup> </h1>
+    <h1>Portfolio <sup class="wip">WiP</sup> </h1>
  <div class="flex-container">
     <div> <a target="_blank" href="https://incandescent-conkies-24d5f7.netlify.app/" title="Air Fryer Recipes">Air Fryer Recipes</a>
 </div>
 <div> <a target="blank" href="https://clever-boyd-3f6704.netlify.app">Weather App</a></div>
-<div> <a target="blank" >Dogs <sup class="wip">WIP</sup></a></div>
+<div> <a target="blank" >Dogs <sup class="wip">WiP</sup></a></div>
 </div>
 </body>
 
