--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
 <div> <a target="blank" >Dogs <sup class="wip">WiP</sup></a></div>
 </div>
 </body>
+<footer>
+    <div class="flex-container">
 
+    <img src="./public/angular.png" alt="angular">
+    <img src="./public/nodejs.png" alt="nodejs">
+    <img src="./public/react.png" alt="react">
+</div>
+
+</footer>
 </html>
