--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Jude's Work in Progress</title>
-</head>
-<body>
-    <h1>Portfolio <sup class="wip">WiP</sup> </h1>
- <div class="flex-container">
-    <div> <a target="_blank" href="https://incandescent-conkies-24d5f7.netlify.app/" title="Air Fryer Recipes">Air Fryer Recipe<sup class="wip">New</sup></a>
-</div>
-<div> <a target="blank" href="https://clever-boyd-3f6704.netlify.app">Weather App</a></div>
-<div> <a target="blank" >Dogs <sup class="wip">WiP</sup></a></div>
-</div>
-</body>
-<footer>
+  </head>
+  <body>
+    <h1>Portfolio <sup class="wip">WiP</sup></h1>
     <div class="flex-container">
-    <img src="./public/ts2.png" alt="typescript">
-    <img src="./public/js.jpg" alt="js">
-    <img src="./public/css3.png" alt="css3">
-    <img src="./public/html5.png" alt="html5">
-    <img src="./public/angular.png" alt="angular">
-    <img src="./public/react.png" alt="react">
-    <img src="./public/node.jpg" alt="nodejs">
-</div>
-</footer>
+      <div>
+        <a
+          target="_blank"
+          href="https://incandescent-conkies-24d5f7.netlify.app/"
+          title="Air Fryer Recipes"
+          >Air Fryer Recipe<sup class="wip">New</sup></a
+        >
+      </div>
+      <div><img src="./public/afr.PNG" /></div>
+      <div>
+        <a target="blank" href="https://clever-boyd-3f6704.netlify.app"
+          >Weather App</a
+        >
+      </div>
+      <div><img src="./public/weather.PNG" /></div>
+
+      
+        
+      </div>
+    </div>
+  </body>
+  <footer>
+    <div class="flex-container">
+      <img src="./public/ts2.png" alt="typescript" />
+      <img src="./public/js.jpg" alt="js" />
+      <img src="./public/css3.png" alt="css3" />
+      <img src="./public/html5.png" alt="html5" />
+      <img src="./public/angular.png" alt="angular" />
+      <img src="./public/react.png" alt="react" />
+      <img src="./public/node.jpg" alt="nodejs" />
+    </div>
+  </footer>
 </html>
